# luxtre

./: .eslintrc  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  default.nix  package.json
7z/: curl.7z
app/: About.js  App.js  Routes.js  config.js  environment.js  index.html  index.js  routes-config.js
electron/: main.development.js
features/: .eslintrc  README.md  ada-redemption.feature  add-wallet-via-sidebar.feature  generate-wallet-address.feature  import-wallet-via-sidebar.feature  navigate-sidebar-categories.feature  rename-wallet-via-settings.feature  restore-wallet-via-sidebar.feature  send-money-to-receiver.feature
installers/: Installer.hs  Launcher.hs  MacInstaller.hs  README.md  RewriteLibs.hs  WindowsInstaller.hs  build-certificates-win64.bat  ca.conf  client.conf  default.nix  launcher-config-mac.yaml  launcher-config-windows.yaml  lux-installer.cabal  lux-installer.nix  luxcoin-installer.cabal  luxcoin-installer.nix  server.conf  stack.yaml  wallet-topology.yaml
installers/data/: Distribution.xml
installers/data/Resources/en.lproj/: conclusion.rtf  welcome.rtf
installers/data/scripts/: postinstall
lib/: redemption-key-validation.js  sol-compiler.js
scripts/: README.md  auto-build-linux.sh  build-installer-unix.sh  build-installer-win64.bat  install.sh  launcher-win.cmd  link-bridge.sh  linux-bundle.sh  luxtre-installer-windows.bat  osx-build-fresh-daedalus.sh  osx-build-fresh-lux.sh  osx-build-fresh-luxcore.sh  osx-bundle.sh  run-core-linux.sh  unlink-bridge.sh  windows-build-fresh-lux.bat  windows-bundle.bat  (+1 more)
(+473 files in other folders)
