name:                luxcoin-installer
version:             0.1.0.0
synopsis:            Luxcoin Installer
description:         Please see README.md
license:             MIT
author:              216k155
maintainer:          216k155 <216K155@luxcore.io>
copyright:           2018 LUXCORE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable make-installer
  main-is:             Installer.hs
  other-modules:       MacInstaller
                     , WindowsInstaller
                     , RewriteLibs
                     , Launcher
  build-depends:       base
                     , filepath
                     , text
                     , Glob
                     , nsis
                     , turtle
                     , directory
                     , temporary
                     , megaparsec

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions: OverloadedStrings
